--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,15 @@
     <string name="app_name">Navoiy Terminology</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="terms">Terms</string>
-    <string name="search_for_terms">Search for terms</string>
+    <string name="terms">Lug\'at</string>
+    <string name="search_for_terms">Lug\'atdan qidirish</string>
     <string name="abandon">Abandon</string>
     <string name="todo">TODO</string>
     <string name="tanlanganlar">Tanlanganlar</string>
-    <string name="description">Description</string>
-    <string name="add">Add</string>
-    <string name="name">Name</string>
+    <string name="description">Izoh</string>
+    <string name="add">Qo\'shish</string>
+    <string name="name">Nomi</string>
+    <string name="term">Lug\'at</string>
+    <string name="info">Ushbu lug\'at Navoiy asarlari tilining izohli lug\'ati kitobiga tayangan yaratildu. Lug\'at o\'zbek tili va adabiyoti yo\'nalishi talabalari, o\'quvchilar va adabiyot ixlosmandlari uchun yaratilgan</string>
+    <string name="writer">Ajiniyoz nomidagi Nukus Davlat pedagogika instituti Magistratura bo\'limi o\'zbek tili va adabiyoti yo\'nalishi 2-kurs magistranti Zamonova Farida</string>
 </resources>
